--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -16,12 +16,25 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.11' # Specify the Python version
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_feature_pipeline.txt
+
+      # Add a step to remove the corrupted February file from the raw data folder
+      - name: Remove corrupted February data file
+        run: |
+          if [ -f data/raw/rides_2024_02.parquet ]; then
+            echo "Removing corrupted rides_2024_02.parquet..."
+            rm -f data/raw/rides_2024_02.parquet
+          else
+            echo "rides_2024_02.parquet does not exist. Skipping removal."
+          fi
+
+      - name: List raw data folder
+        run: ls -al data/raw/
 
       - name: Run new data fetch pipeline and load to hopsworks
         env:
